[package]
name = "git-chronicler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "~4.5.34", features = ["derive", "env"] }
tempfile = "3.19.1"
codehawk = { git = "https://github.com/giuseppe/codehawk.git" }
