[package]
name = "git-chronicler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "~4.5.34", features = ["derive", "env"] }
tempfile = "3.19.1"
codehawk = { git = "https://github.com/giuseppe/codehawk.git", rev="f02a0a1c9667b82ca1034e10ba6b8b3a56719aa8" }
log = "0.4"
env_logger = "0.11.8"
regex = "1.11.1"
